footer fixed (no longer overlapping)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
 .App {
   text-align: center;
 }
+
+body{
+  min-height: 100vh;
+}
